@@ -46,11 +46,16 @@
 #include <qdir.h>
 #include <qbuttongroup.h>
 #include <qwidgetstack.h>
+#include <qregexp.h>
+#include <qvalidator.h>
+#include <qclipboard.h>
+#include <qapplication.h>
 
 #include "qucstrans.h"
 #include "helpdialog.h"
 #include "optionsdialog.h"
 #include "transline.h"
+#include "units.h"
 #include "microstrip.h"
 #include "coax.h"
 #include "rectwaveguide.h"
@@ -221,6 +226,11 @@ QucsTranscalc::QucsTranscalc() {
 
   // create execute menu
   QPopupMenu * execMenu = new QPopupMenu ();
+  QAction * execCopy =
+    new QAction (tr("Copy to Clipboard"),
+		 tr("&Copy to Clipboard"), Key_F2, this);
+  execCopy->addTo (execMenu);
+  connect(execCopy, SIGNAL(activated()), SLOT(slotCopyToClipBoard()));
   QAction * execAnalyze =
     new QAction (tr("Analyze"), tr("&Analyze"), Key_F3, this);
   execAnalyze->addTo (execMenu);
@@ -448,6 +458,8 @@ void QucsTranscalc::createPropItem (QVBox ** parentRows, TransValue * val,
   QLabel * l;
   QLineEdit * e;
   QComboBox * c;
+  QRegExp * rx = new QRegExp ("[0-9+\\-eE\\.]+", this);
+  QRegExpValidator * v = new QRegExpValidator (*rx, this);
 
   // name label
   l = new QLabel (val->name, parentRows[0]);
@@ -459,6 +471,7 @@ void QucsTranscalc::createPropItem (QVBox ** parentRows, TransValue * val,
   e = new QLineEdit (parentRows[1]);
   e->setText (QString::number (val->value));
   e->setAlignment (Qt::AlignRight);
+  e->setValidator (v);
   connect(e, SIGNAL(textChanged(const QString&)), SLOT(slotValueChanged()));
   if (!val->name) e->setDisabled (true);
   val->lineedit = e;
@@ -1112,4 +1125,48 @@ void QucsTranscalc::slotRadioChecked(int id)
     }
   }
   updateSelection ();
+}
+
+void QucsTranscalc::slotCopyToClipBoard()
+{
+  QString s = "<Qucs Schematic " PACKAGE_VERSION ">\n";
+
+  if (mode == ModeMicrostrip) {
+    transline * l = TransLineTypes[0].line;
+    s += "<Components>\n";
+    s +="  <Pac P2 1 270 150 18 -26 0 1 \"2\" 1 \"50 Ohm\" 1 \"0 dBm\" 0 \"1 GHz\" 0 \"26.85\" 0>\n";
+    s += "  <Pac P1 1 90 150 -74 -26 1 1 \"1\" 1 \"50 Ohm\" 1 \"0 dBm\" 0 \"1 GHz\" 0 \"26.85\" 0>\n";
+    s += "  <GND * 1 90 180 0 0 0 0>\n";
+    s += "  <GND * 1 270 180 0 0 0 0>\n";
+    s += QString("  <SUBST SubstTC1 1 390 140 -30 24 0 0 \"%1\" 1 \"%2 mm\" 1 \"%3 um\" 1 \"%4\" 1 \"%5\" 1 \"%6\" 1>\n").
+      arg(l->getProperty("Er")).
+      arg(l->getProperty("H", UNIT_LENGTH, LENGTH_MM)).
+      arg(l->getProperty("T", UNIT_LENGTH, LENGTH_UM)).
+      arg(l->getProperty("Tand")).
+      arg(1 / l->getProperty("Cond")).
+      arg(l->getProperty("Rough", UNIT_LENGTH, LENGTH_M));
+    s += "  <.SP SPTC1 1 90 240 0 51 0 0 ";
+    double freq = l->getProperty("Freq", UNIT_FREQ, FREQ_GHZ);
+    if (freq > 0)
+      s += QString("\"log\" 1 \"%1 GHz\" 1 \"%2 GHz\" 1 ").
+	arg(freq / 10).arg(freq * 10);
+    else
+      s += "\"lin\" 1 \"0 GHz\" 1 \"10 GHz\" 1 ";
+    s += "\"51\" 1 \"no\" 0 \"1\" 0 \"2\" 0>\n";
+    s += QString("  <MLIN MSTC1 1 180 100 -26 15 0 0 \"SubstTC1\" 1 \"%1 mm\" 1 \"%2 mm\" 1 \"Hammerstad\" 0 \"Kirschning\" 0 \"26.85\" 0>\n").
+      arg(l->getProperty("W", UNIT_LENGTH, LENGTH_MM)).
+      arg(l->getProperty("L", UNIT_LENGTH, LENGTH_MM));
+    s += "  <Eqn EqnTC1 1 240 260 -23 12 0 0 \"A=twoport(S,'S','A')\" 1 \"ZL=real(sqrt(A[1,2]/A[2,1]))\" 1 \"yes\" 0>\n"; 
+    s += "</Components>\n";
+    s += "<Wires>\n";
+    s += "  <90 100 150 100 \"\" 0 0 0 \"\">\n";
+    s += "  <90 100 90 120 \"\" 0 0 0 \"\">\n";
+    s += "  <210 100 270 100 \"\" 0 0 0 \"\">\n";
+    s += "  <270 100 270 120 \"\" 0 0 0 \"\">\n";
+    s += "</Wires>\n";
+  }
+
+  // put resulting transmission line schematic into clipboard
+  QClipboard *cb = QApplication::clipboard();
+  cb->setText(s);
 }
