@@ -18,8 +18,6 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
  * USA.
  *
- * $Id: transline.cpp,v 1.2 2005-04-04 08:28:15 raimi Exp $
- *
  */
 
 #include "qucstrans.h"
